--- a/apps/docs/src/content/components/action-bar.mdx
+++ b/apps/docs/src/content/components/action-bar.mdx
@@ -25,3 +25,7 @@ import { Header } from "../../components/Header";
 >
 > Check the [Card](/components/card) component to see an example of the
 > `HvActionBar` in use.
+
+### Related components
+
+- [`HvCard`](/components/card)
