--- a/apps/docs/src/content/components/avatar-group.mdx
+++ b/apps/docs/src/content/components/avatar-group.mdx
@@ -87,3 +87,7 @@ const users = [
   { name: "Clara", img: "https://i.imgur.com/6sYhSb6.png" },
 ];
 ```
+
+### Related components
+
+- [`HvAvatar`](/components/avatar)
