--- a/apps/docs/src/content/components/avatar.mdx
+++ b/apps/docs/src/content/components/avatar.mdx
@@ -19,6 +19,10 @@ import { Header } from "../../components/Header";
   }}
 />
 
+> [!NOTE]
+>
+> To display grouped avatars use the [HvAvatarGroup](/components/avatar-group) component.
+
 ### Image Avatars
 
 Image avatars can be created by passing the src or srcSet props to the component.
@@ -105,7 +109,8 @@ You can configure the `size` and `variant` of an avatar. When using an icon, set
 
 ### Status
 
-An avatar can have a status, represented by either the status colored border or by the badge dot. The color can be from the theme palette or custom.
+An avatar can have a status, represented by either the status colored border or by the badge dot.
+The color can be from the theme palette or any other valid CSS color like using the [`color`](/docs/styling#color-prop) prop.
 
 ```tsx live
 <div className="flex gap-xs">
@@ -204,3 +209,7 @@ An avatar should be interacted with by wrapping it in an interactable element, s
   </HvButton>
 </div>
 ```
+
+### Related components
+
+- [`HvAvatarGroup`](/components/avatar-group)
