--- a/apps/docs/src/content/components/checkbox-group.mdx
+++ b/apps/docs/src/content/components/checkbox-group.mdx
@@ -60,5 +60,5 @@ export default function Demo() {
 ### Related components
 
 - [`HvFormElement`](/components/form-element)
+- [`HvCheckbox`](/components/checkbox)
 - [`HvSelectionList`](/components/selection-list)
-- [`HvCheckbox`](/components/radio)
