--- a/apps/docs/src/content/components/checkbox.mdx
+++ b/apps/docs/src/content/components/checkbox.mdx
@@ -73,6 +73,7 @@ export default function Demo() {
 
 ### Related components
 
+- [`HvCheckBoxGroup`](/components/checkbox-group)
 - [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
 - [`HvRadio`](/components/radio)
