--- a/apps/docs/src/content/components/input.mdx
+++ b/apps/docs/src/content/components/input.mdx
@@ -18,6 +18,10 @@ import { Header } from "../../components/Header";
   }}
 />
 
+> [!TIP]
+>
+> Check out our [input examples](/examples/inputs)!
+
 ### Controlled
 
 You can control the value of the `HvInput` by using the `value`/`onChange` props, similarly to the `<input>` element.
