--- a/apps/docs/src/content/components/number-input.mdx
+++ b/apps/docs/src/content/components/number-input.mdx
@@ -24,3 +24,7 @@ import { Header } from "../../components/Header";
 >
 > The `HvNumberInput` component shares the same API as `HvInput`. For full
 > documentation, see the [HvInput component page](/components/input).
+
+### Related components
+
+- [`HvInput`](/components/input)
