--- a/apps/docs/src/content/components/overflow-tooltip.mdx
+++ b/apps/docs/src/content/components/overflow-tooltip.mdx
@@ -25,3 +25,7 @@ import { Header } from "../../components/Header";
   }}
   decoratorClassName="max-w-160px"
 />
+
+### Related components
+
+- [`HvTooltip`](/components/tooltip)
