--- a/apps/docs/src/content/components/status-icon.mdx
+++ b/apps/docs/src/content/components/status-icon.mdx
@@ -107,3 +107,7 @@ you need to provide the appropriate Phosphor classname for each weight.
   />
 </div>
 ```
+
+### Related components
+
+- [`HvIconContainer`](/components/icon-container)
