--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -18,6 +18,10 @@ import { Header } from "../../components/Header";
   }}
 />
 
+> [!TIP]
+>
+> Check out our [switch examples](/examples/switches)!
+
 ### Controlled
 
 The selection state can be controlled by using the `checked`/`onChange` props.
