--- a/apps/docs/src/content/components/table.mdx
+++ b/apps/docs/src/content/components/table.mdx
@@ -27,6 +27,10 @@ import { Header } from "../../components/Header";
 > examples](https://react-table-v7-docs.netlify.app/docs/examples/basic) for
 > usage scenarios.
 
+> [!TIP]
+>
+> Check out our [table examples](/examples/tables)!
+
 ## Table components
 
 Each HTML table element (`<table>`, `<tr>`, `<td>`, etc.) that a corresponding `HvTable*` component.
