--- a/apps/docs/src/content/components/dialog.mdx
+++ b/apps/docs/src/content/components/dialog.mdx
@@ -10,6 +10,10 @@ import { Header } from "../../components/Header";
 
 <Header params={{ name: "Dialog", classes }} />
 
+> [!NOTE]
+>
+> If you want a drawer effect use our [`HvDrawer`](/components/drawer) component.
+
 ### Maximum width
 
 Use the `maxWidth` prop to set the maximum width of the dialog. The width of the dialog will adjust automatically to the width of the content, unless the prop `fullWidth` is set to `true` in which case the dialog will grow to occupy the width specified on `maxWidth`.
@@ -342,3 +346,7 @@ const DialogForm = () => (
   </HvGrid>
 );
 ```
+
+### Related components
+
+- [`HvDrawer`](/components/drawer)
