--- a/apps/docs/src/content/components/progress-bar.mdx
+++ b/apps/docs/src/content/components/progress-bar.mdx
@@ -78,3 +78,4 @@ export default function Demo() {
 ### Related components
 
 - [`HvLoading`](/components/loading)
+- [`HvSkeleton`](/components/skeleton)
