--- a/apps/docs/src/app/examples/dialogs/page.mdx
+++ b/apps/docs/src/app/examples/dialogs/page.mdx
@@ -12,7 +12,15 @@ Explore different dialog types and features—like confirmation dialogs, alert d
 
 <div className="overflow-hidden mt-20">
   <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px auto-rows-min [&>*]:min-h-[200px]">
-    <CodeBlock code={confirmationDialog} layout="popup" title="Confirmation Dialog" />
-    <CodeBlock code={multipleStepDialog} layout="popup" title="Multiple Step Dialog" />
+    <CodeBlock
+      code={confirmationDialog}
+      layout="popup"
+      title="Confirmation Dialog"
+    />
+    <CodeBlock
+      code={multipleStepDialog}
+      layout="popup"
+      title="Multiple Step Dialog"
+    />
   </div>
 </div>
