--- a/apps/docs/src/app/examples/inputs/page.mdx
+++ b/apps/docs/src/app/examples/inputs/page.mdx
@@ -5,11 +5,11 @@ title: "Inputs"
 import { CodeBlock } from "../../../components/code/CodeBlock";
 import copyButton from "./CopyButton?raw";
 import dropdownPrefix from "./DropdownPrefix?raw";
+import dropdownSuffix from "./DropdownSuffix?raw";
 import dropdownTreeview from "./DropdownTreeview?raw";
 import editableValue from "./EditableInput?raw";
 import labelSide from "./LabelSide?raw";
 import leadingIcon from "./LeadingIcon?raw";
-import dropdownSuffix from "./DropdownSuffix?raw";
 import tagsDropdown from "./TagsDropdown?raw";
 import tagsInputDropdown from "./TagsInputDropdown?raw";
 
@@ -20,21 +20,17 @@ Explore different input types and features—like dropdowns, tags, editable text
 <div className="overflow-hidden mt-20">
   <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px auto-rows-min [&>*]:min-h-[200px]">
     <CodeBlock code={leadingIcon} layout="popup" />
+    <CodeBlock code={copyButton} layout="popup" />
+    <CodeBlock code={labelSide} layout="popup" title="Label left side" />
     <CodeBlock code={dropdownPrefix} layout="popup" />
     <CodeBlock code={dropdownSuffix} layout="popup" />
     <CodeBlock code={dropdownTreeview} layout="popup" />
-    <CodeBlock code={copyButton} layout="popup" />
     <CodeBlock code={tagsDropdown} layout="popup" />
     <CodeBlock code={tagsInputDropdown} layout="popup" />
     <CodeBlock
       code={editableValue}
       layout="popup"
       title="Inline Editable Text"
-    />
-    <CodeBlock
-      code={labelSide}
-      layout="popup"
-      title="Label left side"
     />
   </div>
 </div>
