--- a/apps/docs/src/app/examples/menus/page.mdx
+++ b/apps/docs/src/app/examples/menus/page.mdx
@@ -12,6 +12,10 @@ Explore different dialog types and features—like confirmation dialogs, alert d
 
 <div className="mt-20">
   <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px auto-rows-min [&>*]:min-h-[200px]">
-    <CodeBlock code={checkboxDropdownMenu} layout="popup" title="Dropdown menu with checkboxes" />
+    <CodeBlock
+      code={checkboxDropdownMenu}
+      layout="popup"
+      title="Dropdown menu with checkboxes"
+    />
   </div>
 </div>
