--- a/apps/docs/src/content/components/dropdown.mdx
+++ b/apps/docs/src/content/components/dropdown.mdx
@@ -35,16 +35,74 @@ Use the `separator` property on any data item to create groups of items within t
 ```tsx live
 <HvDropdown
   values={[
-    { id: "import", label: "Import", icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-download-simple" />} /> },
-    { id: "export", label: "Export", icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-export" />} /> },
-    { id: "share", label: "Share", icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-share-network" />} />, separator: true },
+    {
+      id: "import",
+      label: "Import",
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-download-simple" />}
+        />
+      ),
+    },
+    {
+      id: "export",
+      label: "Export",
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-export" />}
+        />
+      ),
+    },
+    {
+      id: "share",
+      label: "Share",
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-share-network" />}
+        />
+      ),
+      separator: true,
+    },
     {
       id: "settings",
       label: "Settings",
-      icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-sliders" />} />,
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-sliders" />}
+        />
+      ),
     },
-    { id: "filters", label: "Filters", icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-funnel" />} />, separator: true },
-    { id: "delete", label: "Delete", icon: <HvStatusIcon variant="default" type="simple" customIcon={<div className="i-ph-trash" />} /> },
+    {
+      id: "filters",
+      label: "Filters",
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-funnel" />}
+        />
+      ),
+      separator: true,
+    },
+    {
+      id: "delete",
+      label: "Delete",
+      icon: (
+        <HvStatusIcon
+          variant="default"
+          type="simple"
+          customIcon={<div className="i-ph-trash" />}
+        />
+      ),
+    },
   ]}
 />
 ```
