--- a/apps/docs/src/content/components/typography.mdx
+++ b/apps/docs/src/content/components/typography.mdx
@@ -49,7 +49,7 @@ but it can be changed to any other element through the `component` prop.
   <HvTypography component="span">Typography as a span</HvTypography>
   <HvTypography
     component="a"
-    href="https://lumada-design.github.io/uikit-docs/master/"
+    href="https://pentaho.github.io/uikit-docs/master/"
     link
   >
     Typography as a link
@@ -77,7 +77,7 @@ export default function Demo() {
     <HvTypography
       link
       component={ExternalLink}
-      to="https://lumada-design.github.io/uikit-docs/master/"
+      to="https://pentaho.github.io/uikit-docs/master/"
     >
       Custom link
     </HvTypography>
